--- a/config.yaml
+++ b/config.yaml
@@ -3,8 +3,8 @@ global_config:
   device: "cuda"
   is_mp: False
   "evaluate": False
-  "use_GPU": "6"
-  "notes": "centerized training"
+  "use_GPU": "1"
+  "notes": "CL-FL std-FL training"
   "tags": ["experimental"]
 ---
 data_config:
@@ -17,15 +17,16 @@ data_config:
 ---
 fed_config:
   C: 1.0
-  K: 1
+  K: 12
   R: 100
   E: 1
   B: 10
   criterion: torch.nn.CrossEntropyLoss
   optimizer: torch.optim.SGD
   non_fed_split_training: False
-  centerized_training: True
+  centerized_training: False
   freeze_backbone: False
+  continue_learning_setting: [True, 3, 30] # [continue learning, continue learning total stages, continue learning change interval]
 ---
 optim_config:
   lr: 0.01
